# value_iteration_rust

./: .gitignore  CLAUDE.md  Makefile  README.md
docs/research/: 2026-06-09-vi-ssp-acceleration.tex  README.md
docs/superpowers/plans/: 2026-04-12-line-buffer-streaming.md  2026-04-14-matlab-src-refactor.md  2026-06-04-vi-ros-compare-benchmark.md  (+1 more)
driver/dts/: README.md  vi_sweep.dtsi
driver/uio/: Makefile  libvi_sweep.c  libvi_sweep.h  vi_device.h  vi_device_mock.c
fpga/: Makefile
fpga/matlab/: README.md
fpga/pynq/: demo_vi.ipynb  explore_map.ipynb  vi_overlay.py
fpga/scripts/: Makefile  export_hls_ip.tcl  export_hls_ip_stream.tcl  export_hls_ip_tile.tcl  run_csim.tcl  run_syn_stream.tcl
fpga/tcl/: build_vivado.tcl  create_bd_matlab.tcl  create_bd_stream.tcl  create_project_matlab.tcl  create_project_stream.tcl  export_hls_ip_tile.tcl  irq_notes.txt  run_csim_stream.tcl
host/: Makefile
host/src/: penalty.c  penalty.h  transitions.c  transitions.h  vi_reference_c.c  vi_reference_c.h
host/test/: test_action_table.c  test_penalty.c  test_reference_eq.c  test_transitions.c
matlab/: .gitignore  README.md  run_matlab_tests.m
matlab/cosim/: cosim_config.m  cosim_tb.m
matlab/fixedpoint/: fp_config.m
matlab/fpga/: export_repo_ip.m
matlab/model/: create_model.m  vi_sweep_stream_matlab.slx
matlab/soc/: build_bitstream.m  soc_config.m
matlab/src/: compute_row_algo.m  cost_of.m  store_row_algo.m  stream_strip_algo.m  vi_params.m  vi_sweep_soc_kernel.m
matlab/test/: TestAlgorithmUnits.m  TestBase.m  TestSolverIntegration.m  gen_test_map.m  gen_transitions.m
matlab/testbench/: gen_test_map.m  tb_load_store_row.m  tb_stream_strip.m
petalinux/: .gitignore  Makefile
petalinux/docker/: .dockerignore  Dockerfile  entrypoint.sh
petalinux/scripts/: build.sh  create_project.sh  setup.sh
scripts/: compare_bench.sh  compare_strict.sh  ros2_build.sh  ros2_test.sh  run_vi_rust.sh
vi_compare/: README.md
vi_compare/compare/: compare.py  make_u64_report.py
vi_compare/ref/: ref_bench.py  run_ref_bench.sh
vi_compare/results/: .gitignore
vi_compare/ros1/: bench_client.py  run_ros1_bench.sh
vi_compare/ros2/: bench_client.py
vi_compare/u64/: run_u64_bench.sh
vi_compare/video/: render_compact.py  render_frames_house.py  render_frames_tsudanuma.py  render_frames_tsukuba.py
vi_fpga/: .gitignore
vi_matlab/: .gitignore  README.md  run_matlab_tests.m  setup_matlab_paths.m  vi_matlab_layout.m
vi_matlab/src/cuda/: README.md
vi_ros2/vi_node/: Cargo.toml
vi_rs/: Cargo.toml
vi_rs/vi_algorithm/: Cargo.toml
vi_rs/vi_algorithm/src/: context.rs  lib.rs  policy.rs
vi_rs/vi_algorithm/src/frontier/: coarse_theta.rs  mod.rs  tau.rs  topk.rs
vi_rs/vi_algorithm/src/kernel/: bellman.rs  mod.rs  norm.rs
vi_rs/vi_bench/: Cargo.toml
vi_rs/vi_bench/benches/: bitboard.rs
vi_rs/vi_bench/src/: lib.rs  pgm.rs
vi_rs/vi_core/: Cargo.toml
vi_rs/vi_core/src/: cost.rs  goal.rs  lib.rs  params.rs  transitions.rs  types.rs
vi_rs/vi_fixtures/: Cargo.toml
vi_rs/vi_reference/: Cargo.toml
vi_rs/vi_reference/src/: lib.rs  value_iterator.rs  value_iterator_tests.rs
vi_rs/vi_reference/src/bitboard/: conv.rs  enumerate.rs  mod.rs  ops.rs
vi_rs/vi_reference/src/solvers/: block.rs  coarse_theta.rs  frontier2d.rs  frontier2d_fused.rs  frontier2d_pad.rs  frontier2d_par.rs  frontier2d_par_unsafe.rs  frontier2d_soa.rs  frontier2d_sparse.rs  frontier2d_sparse_compact.rs  frontier3d.rs  mod.rs  prio_lc.rs  priority.rs  pyramid.rs  tau.rs  topk.rs
(+189 files in other folders)
