[workspace]
resolver = "2"
members = ["vi_core", "vi_algorithm", "vi_fixtures", "vi_bench"]

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
ndarray   = "0.16"
rayon     = "1.10"
thiserror = "1"
criterion = { version = "0.5", features = ["html_reports"] }
once_cell = "1"
rand      = "0.8"
proptest  = "1"
clap      = { version = "4", features = ["derive"] }
