[package]
name = "vi_algorithm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
vi_core = { path = "../vi_core" }
ndarray = { workspace = true }
rayon   = { workspace = true, optional = true }

[features]
default = []
parallel = ["dep:rayon"]

[dev-dependencies]
proptest    = { workspace = true }
vi_fixtures = { path = "../vi_fixtures" }
