[package]
name = "vi_bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
vi_core      = { path = "../vi_core" }
# u64 (本家忠実) ソルバ群。bench_summary / bench_map / criterion ベンチの本体。
# bitboard ベンチ (benches/bitboard.rs) は vi_reference::bitboard を参照する。
vi_reference = { path = "../vi_reference" }
criterion    = { workspace = true }
clap         = { workspace = true }
# pgm.rs が Array2<Penalty> を扱う。
ndarray      = { workspace = true }

[features]
default = []
# u64 ソルバは現状シリアルのみ。`make rs-bench-parallel` が `--features parallel`
# を渡すのでフラグ自体は残すが、ベンチ側では no-op（並列パスはまだ無い）。
parallel = []

[[bench]]
name = "reference"
harness = false

[[bench]]
name = "frontier"
harness = false

[[bench]]
name = "block_pyramid"
harness = false

[[bench]]
name = "bitboard"
harness = false

[[bench]]
name = "stream_mimic"
harness = false
