[package]
name = "vi_bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# u64 (本家忠実) ソルバ群。bench_summary / bench_map / criterion ベンチの本体。
# bitboard ベンチ (benches/bitboard.rs) は vi_reference::bitboard を参照する。
vi_reference = { path = "../vi_reference" }
criterion    = { workspace = true }
clap         = { workspace = true }

[features]
default = []
# criterion / bench_summary が回す既定ソルバはシリアル実装。マルチスレッド版
# (frontier2d_par* 系) は bench_map から直接選ぶ運用で、この feature では切り替え
# ない。`make rs-bench-parallel` が `--features parallel` を渡すので互換のため残すが、
# bench_summary 側では no-op。
parallel = []

[[bench]]
name = "reference"
harness = false

[[bench]]
name = "frontier"
harness = false

[[bench]]
name = "block_pyramid"
harness = false

[[bench]]
name = "bitboard"
harness = false

[[bench]]
name = "stream_mimic"
harness = false
