[package]
name = "vi_reference"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# bitboard モジュール (旧 vi_algorithm から取り込み) が ndarray⇔bitboard 変換に使う。
# 忠実移植本体 (ValueIterator 等) は ndarray を使わず、bitboard プリミティブ専用。
ndarray = { workspace = true }

[dev-dependencies]
# bitboard の property test を駆動する (旧 vi_algorithm の dev-dep から移設)。
proptest = { workspace = true }
